# loggy3

./: .gitignore  Cargo.toml  README.md  build.sh  loggy3.sh  logup.sh  mac-install.sh  render.py  requirements.txt
.github/workflows/: rust.yml
assets/: icon.icns
license/: license.html
py/: dataloader.py  frame_analyzer.py  render.py  timeline.py  use_tokenizer.py
src/: lib.rs  main.rs  tokens.rs
src/permissions/: mod.rs
src/platform/: mac.rs  mod.rs  windows.rs
web/: index.html
