[package]
name = "loggy3"
version = "0.1.3"
edition = "2021"

[package.metadata.bundle]
identifier = "com.standardintelligence.loggy3"
icon = ["assets/icon.icns"]
copyright = "Copyright (c) 2025 Standard Intelligence"
category = "public.app-category.utilities"
short_description = "Screen Recording Application"
long_description = """
A screen recording application with input monitoring capabilities.
"""

[dependencies]
scap = "0.0.8"
rdev = "0.5.3"
chrono = "0.4"
anyhow = "1.0"
dirs = "6.0"
stdio-override = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
lazy_static = "1.5.0"


[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.0"
tray-icon = "0.20.0"
image = "0.25.5"
native-dialog = "0.7.0"
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.4.2"
winapi = { version = "0.3.9", features = ["shellscalingapi", "hidusage", "libloaderapi"] }
