[package]
name = "loggy3"
version = "0.1.37"
edition = "2021"
default-run = "loggy3"

[lib]
name = "loggy3"
crate-type = ["cdylib", "rlib"]

[package.metadata.bundle]
identifier = "com.standardintelligence.loggy3"
icon = ["assets/icon.icns"]
copyright = "Copyright (c) 2025 Standard Intelligence"
category = "public.app-category.utilities"
short_description = "Screen Recording Application"
long_description = """
A screen recording application with input monitoring capabilities.
"""

[[bin]]
name = "tokens"
path = "src/tokens.rs"

[dependencies]
scap = "0.0.8"
chrono = "0.4"
anyhow = "1.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
lazy_static = "1.4.0"
indicatif = "0.17.3"
colored = "3.0.0"
ureq = { version = "2.9.1", features = ["json"] }
sysinfo = "0.30.5"
uuid = { version = "1.6.1", features = ["v4"] }
fs2 = "0.4.3"
pyo3 = { version = "0.19.0", features = ["extension-module"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.4.2"
winapi = { version = "0.3.9", features = ["shellscalingapi", "shellapi", "sysinfoapi", "hidusage", "libloaderapi", "winnt", "ntdef"] }
ntapi = "0.4.1"
